--- a/index.html
+++ b/index.html
@@ -174,23 +174,23 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-primary mb-3">Kirim</button>
             </form>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#0d6efd"
           fill-opacity="1"
           d="M0,192L60,213.3C120,235,240,277,360,266.7C480,256,600,192,720,186.7C840,181,960,235,1080,256C1200,277,1320,267,1380,261.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
         ></path>
-      </svg>
+      </svg> -->
     </section>
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-primary text-white text-center p-3">
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/suregas02/" class="text-white fw-bold">Surega Sucipto</a></p>
     </footer>
     <!-- Akhir Footer -->
